fixed title alignment

--- a/screen.css
+++ b/screen.css
@@ -109,6 +109,7 @@ img {
 }
 #third {
   padding-bottom: 1.2222222222em;
+  width: 83%;
 }
 section {
   margin-left: auto;
